Ensure author dropdown visible over posts

--- a/assets/dashboard/app.css
+++ b/assets/dashboard/app.css
@@ -50,7 +50,7 @@ body.wp-admin .liveblog-pagination button {
 	margin: 4px;
 }
 
-.liveblog-admin-publish-section {
+body.wp-admin .liveblog-admin-publish-section {
 	top: 80px;
 	left: 82%;
 	position: relative;
@@ -60,7 +60,7 @@ body.wp-admin .liveblog-pagination button {
 
 body.wp-admin .liveblog-admin-wrapper .liveblog-editor-container .Select--multi {
 	width: 80%;
-}
-{
 	margin-bottom: 30px;
+  z-index: 2;
 }
+
